force-app/main/default/objects/Contracting_Status__c/Contracting_Status__c.object-meta.xml
<CustomObject>
    <label>Contracting Status</label>
    <nameField>
        <label>Contracting Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracting Statuss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>