force-app/main/default/objects/Contracting_Status__c/fields/ContractingStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractingStatus__c</fullName>
    <label>Contracting Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>