force-app/main/default/objects/Contracting_Status__c/fields/FMV__c.field-meta.xml
<CustomField>
    <fullName>FMV__c</fullName>
    <label>FMV</label>
    <length>255</length>
    <type>Text</type>
</CustomField>