force-app/main/default/objects/Contracting_Status__c/fields/Last_Contract_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Last_Contract_Engagement__c</fullName>
    <label>Last Contract Engagement</label>
    <type>DateTime</type>
</CustomField>