force-app/main/default/objects/Contracting_Status__c/fields/Lilly_Account__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracting Statuses</relationshipLabel>
    <relationshipName>Contracting_Statuss</relationshipName>
    <type>Lookup</type>
</CustomField>