force-app/main/default/objects/Contracting_Status__c/fields/Lilly_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PPQ</fullName>
            </value>
            <value>
                <fullName>MSA</fullName>
            </value>
            <value>
                <fullName>MRC</fullName>
            </value>
            <value>
                <fullName>Speaking</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>