force-app/main/default/objects/Contracting_Status__c/fields/Lilly_Contracting_Country__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Contracting_Country__c</fullName>
    <label>Contracting Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OCE__Countries</valueSetName>
    </valueSet>
</CustomField>