force-app/main/default/objects/Contracting_Status__c/fields/Lilly_Special_contracting_needs__c.field-meta.xml
<CustomField>
    <fullName>Lilly_Special_contracting_needs__c</fullName>
    <label>Special contracting needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Institution Limits</fullName>
            </value>
            <value>
                <fullName>Country Limits</fullName>
            </value>
            <value>
                <fullName>State Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>