force-app/main/default/objects/Contracting_Status__c/fields/Lilly_URL_from_CPS__c.field-meta.xml
<CustomField>
    <fullName>Lilly_URL_from_CPS__c</fullName>
    <label>URL from CPS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>