force-app/main/default/objects/Contracting_Status__c/fields/OfflineCreatedByID__c.field-meta.xml
<CustomField>
    <fullName>OfflineCreatedByID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OfflineCreatedByID</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracting_Statuss</relationshipName>
    <type>Lookup</type>
</CustomField>