force-app/main/default/objects/Contracting_Status__c/fields/OfflineLastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OfflineLastModifiedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Contracting_Statuss1</relationshipName>
    <type>Lookup</type>
</CustomField>