force-app/main/default/objects/Contracting_Status__c/fields/OfflineLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>OfflineLastModifiedDate__c</fullName>
    <label>OfflineLastModifiedDate</label>
    <type>DateTime</type>
</CustomField>