force-app/main/default/objects/Contracting_Status__c/fields/Performance_Evaluation_Avg__c.field-meta.xml
<CustomField>
    <fullName>Performance_Evaluation_Avg__c</fullName>
    <label>Performance Evaluation Avg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>