force-app/main/default/objects/Contracting_Status__c/fields/Pref_Survey__c.field-meta.xml
<CustomField>
    <fullName>Pref_Survey__c</fullName>
    <label>Pref Survey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>