force-app/main/default/objects/Contracting_Status__c/fields/Previous_Contract_Engagements__c.field-meta.xml
<CustomField>
    <fullName>Previous_Contract_Engagements__c</fullName>
    <label>Previous Contract Engagements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>